fix: protected checkbox misalignment

--- a/frontend/src/components/dashboard/create/create-modal/CreateModal.module.scss
+++ b/frontend/src/components/dashboard/create/create-modal/CreateModal.module.scss
@@ -71,30 +71,6 @@
   }
 }
 
-.protectedOption {
-  height: 1.5rem;
-  width: 50%;
-  align-self: flex-end;
-  @include flex-horizontal;
-  margin-top: 1rem;
-  padding-left: 1rem;
-  cursor: pointer;
-
-  @include mobile() {
-    width: 100%;
-    padding-left: 0px;
-    align-self: stretch;
-  }
-
-  .icon {
-    margin-right: 0.2rem;
-  }
-
-  p {
-    margin: 0;
-  }
-}
-
 .input {
   background-color: $light-blue;
 }
